@@ -14668,7 +14668,7 @@
 (define-method expand_row
   (of-object "GtkTreeView")
   (c-name "gtk_tree_view_expand_row")
-  (return-type "gboolean")
+  (return-type "gboolean)"
   (parameters
     '("GtkTreePath*" "path")
     '("gboolean" "open_all")
